Bug 352597 - Umbrello deletes packages from Class Diagram
Summary: Umbrello deletes packages from Class Diagram
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.16.0 (KDE Applications 15.04.0)
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-12 03:08 UTC by Brallan Aguilar
Modified: 2016-10-27 11:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.17.2 (KDE Applications 15.08.2)
Sentry Crash Report:


Attachments
test case (8.80 KB, text/x-xmi)
2015-09-12 10:36 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brallan Aguilar 2015-09-12 03:08:09 UTC
When I create a Class Diagram and add inside it a package, when I reopen the file, this package disappear from the Class Diagram although it exists in Logical View.

Reproducible: Always



Expected Results:  
When I reopen my file, the packages should appear in the Class Diagram view
Comment 1 Ralf Habacker 2015-09-12 10:36:11 UTC
Created attachment 94515 [details]
test case

umbrello prints on load: 
umbrello(15991): validateObjType( "neues_paket" ): expected type  "ot_Class" , actual type  "ot_Package" 
umbrello(15991): cannot find widget for roleA id  "R3mIhJK9Ny7v"
Comment 2 Ralf Habacker 2015-09-12 11:14:16 UTC
Git commit 9adde748d73aa5ac9b3101724d880d58ff2514cd by Ralf Habacker.
Committed on 12/09/2015 at 11:13.
Pushed by habacker into branch 'Applications/15.08'.

Fix 'Umbrello deletes packages from Class Diagram'.

Package widgets are saved as class widgets and the related uml object type is ot_Package.
FIXED-IN: 2.17.2 (KDE Applications 15.08.2)

M  +1    -1    umbrello/widgets/widget_factory.cpp

http://commits.kde.org/umbrello/9adde748d73aa5ac9b3101724d880d58ff2514cd
Comment 3 Oliver Kellogg 2015-09-12 13:04:52 UTC
(In reply to Ralf Habacker from comment #2)
> [...]
> Package widgets are saved as class widgets and the related uml object type
> is ot_Package.

Hmm... Package widgets should be saved as "packagewidget", no?
Comment 4 Ralf Habacker 2015-09-14 16:14:08 UTC
Git commit cd350fa7b2c0283331ec15cb784323930511b532 by Ralf Habacker.
Committed on 14/09/2015 at 16:13.
Pushed by habacker into branch 'Applications/15.08'.

Write package widgets into the xmi file using a "packagewidget" tag.

This commit is a fixup of commit a6e8b2e4d6d021b6bb689820d0ae4a3edcee6eb1.
Thanks to Oliver Kellogg for pointing out.
Related: bug 336012

M  +7    -1    umbrello/widgets/classifierwidget.cpp
M  +2    -0    umbrello/widgets/widget_factory.cpp

http://commits.kde.org/umbrello/cd350fa7b2c0283331ec15cb784323930511b532
Comment 5 Ralf Habacker 2015-12-16 18:49:19 UTC
Git commit 896cce0d0c8e6b53af190619a94cb9933da9e410 by Ralf Habacker.
Committed on 16/12/2015 at 18:15.
Pushed by habacker into branch 'frameworks'.

Write package widgets into the xmi file using a "packagewidget" tag.

This commit is a fixup of commit a6e8b2e4d6d021b6bb689820d0ae4a3edcee6eb1.
Thanks to Oliver Kellogg for pointing out.
Related: bug 336012

M  +7    -1    umbrello/widgets/classifierwidget.cpp
M  +2    -0    umbrello/widgets/widget_factory.cpp

http://commits.kde.org/umbrello/896cce0d0c8e6b53af190619a94cb9933da9e410
Comment 6 Ralf Habacker 2015-12-16 18:51:08 UTC
Git commit 7144e0a07e34219d03d7141efff65904d24d0a87 by Ralf Habacker.
Committed on 16/12/2015 at 18:15.
Pushed by habacker into branch 'frameworks'.

Fix 'Umbrello deletes packages from Class Diagram'.

Package widgets are saved as class widgets and the related uml object type is ot_Package.
FIXED-IN: 2.17.2 (KDE Applications 15.08.2)

M  +1    -1    umbrello/widgets/widget_factory.cpp

http://commits.kde.org/umbrello/7144e0a07e34219d03d7141efff65904d24d0a87
Comment 7 Lays Rodrigues 2016-10-27 11:47:07 UTC
Git commit f0c8a10d13b1bd1d078e87eb616d13ba4ecf4056 by Lays Rodrigues, on behalf of Ralf Habacker.
Committed on 27/10/2016 at 11:44.
Pushed by laysrodrigues into branch 'frameworks'.

Fix 'Umbrello deletes packages from Class Diagram'.

Package widgets are saved as class widgets and the related uml object type is ot_Package.
FIXED-IN: 2.17.2 (KDE Applications 15.08.2)

M  +1    -1    umbrello/umlwidgets/widget_factory.cpp

http://commits.kde.org/umbrello/f0c8a10d13b1bd1d078e87eb616d13ba4ecf4056
Comment 8 Lays Rodrigues 2016-10-27 11:47:07 UTC
Git commit b006b7e76d981824de094c656170140f9ddeb78e by Lays Rodrigues, on behalf of Ralf Habacker.
Committed on 27/10/2016 at 11:44.
Pushed by laysrodrigues into branch 'frameworks'.

Write package widgets into the xmi file using a "packagewidget" tag.

This commit is a fixup of commit a6e8b2e4d6d021b6bb689820d0ae4a3edcee6eb1.
Thanks to Oliver Kellogg for pointing out.
Related: bug 336012

M  +1    -1    umbrello/umlwidgets/widget_factory.cpp

http://commits.kde.org/umbrello/b006b7e76d981824de094c656170140f9ddeb78e