Fix 'Umbrello deletes packages from Class Diagram'.

Package widgets are saved as class widgets and the related uml object type is ot_Package.

BUG:352597
FIXED-IN: 2.17.2 (KDE Applications 15.08.2)